@@ -112,7 +112,7 @@ class Smarty extends Smarty_Internal_TemplateBase
     /**
      * smarty version
      */
-    const SMARTY_VERSION = '3.1.33-dev-10';
+    const SMARTY_VERSION = '3.1.33-dev-11';
     /**
      * define variable scopes
      */
